<resources>
    <string name="app_name">BusinessCard</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_business_card">Cartão de Visita</string>
    <string name="add_business_card">add Business Card</string>
    <string name="label_description_new_card">Novo Cartão</string>
    <string name="label_name">Nome</string>
    <string name="label_phone">Telefone</string>
    <string name="label_email">E-mail</string>
    <string name="label_enterprise">Empresa</string>
    <string name="label_background">Cor de Fundo</string>
    <string name="title">Escolha uma cor:</string>
    <string name="card_background_label">Cor de Fundo</string>
    <string name="confirm_delete">Sim</string>
    <string name="negative_delete">Não</string>
    <string name="confirm_delete_text">Tem certeza que deseja deletar o cartão?</string>
    <string name="confirm_delete_card">Cartão deletado com sucesso?</string>
    <string name="negative_delete_card">Cartão não deletado.</string>
    <string name="label_share_to">Compartilhar</string>
</resources>